# swiggy-analyzer

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  NEXT_STEPS.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  WEB_UI_COMPLETE.md  WEB_UI_GUIDE.md  WEB_UI_SUMMARY.md  WEB_UI_TROUBLESHOOTING.md  config.yaml  create_test_data.py  install.sh  open_web_ui.sh  pyproject.toml  requirements.txt  run_web.sh  setup.py  verify.sh
swiggy_analyzer/analysis/: pattern_detector.py  predictor.py  scoring.py
swiggy_analyzer/auth/: oauth_manager.py  token_store.py
swiggy_analyzer/basket/: formatter.py  manager.py
swiggy_analyzer/cli/: commands.py  main.py
swiggy_analyzer/config/: defaults.py  settings.py
swiggy_analyzer/mcp/: client.py  endpoints.py
swiggy_analyzer/scheduler/: cron_manager.py
swiggy_analyzer/web/: app.py
swiggy_analyzer/web/static/css/: style.css
swiggy_analyzer/web/static/js/: app.js
swiggy_analyzer/web/templates/: index.html
tests/: conftest.py
tests/test_analysis/: test_pattern_detector.py  test_scoring.py
tests/test_data/: test_repository.py
